--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.6",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1"
   }
 }
